--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "stripe": "^11.16.0",
     "styled-components": "^5.3.9"
   }
