--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "micro": "^10.0.1",
     "mongoose": "^7.0.2",
     "next": "13.2.4",
+    "nodemailer": "^6.9.3",
     "react": "18.2.0",
     "react-datepicker": "^4.15.0",
     "react-dom": "18.2.0",
