--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.5",
+    "@mui/x-date-pickers": "^6.10.0",
     "axios": "^1.3.4",
+    "dayjs": "^1.11.9",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "i18next": "^23.2.7",
